--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,11 @@
 
 .App {
     width: 100%;
-
-
+    color:#ffffff;
+    background-color: #0e1621;
 }
 
-.dark-color{
+header {
     background-color: #213245;
+    box-shadow: 0 0 5px black;
 }
